ajout de nouveau icone de voie et anim

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,4 +1,8 @@
 /*variables*/
 $Lgold:#C7A96E;
 $Dgold:#9A835E;
-$c-fond:rgb(12, 15, 43);
+$c-gold:#F4AF2E;
+$c-bleu:#ffb835;
+$c-fond:#0c0f2b;
+
+//background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
