changement charte graphique et architecture

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,8 +1,10 @@
 /*variables*/
-$Lgold:#C7A96E;
-$Dgold:#9A835E;
-$c-gold:#F4AF2E;
-$c-bleu:#ffb835;
-$c-fond:#0c0f2b;
+
+$c-jaune:#f6d365;
+$c-rose:#fda085;
+$c-bleu:#0c0f2b;
+
+$c-texte:#0c0f2b;
+$c-fond:#fff;
 
 //background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
